--- a/src/main/resources/templates/Bienvenida.html
+++ b/src/main/resources/templates/Bienvenida.html
@@ -4,15 +4,35 @@
     <meta charset="UTF-8">
     <title>Registro Exitoso</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
+    <script src="/js/tareas.js"></script>
+
 </head>
 <body>
 <div class="col-first">
     <h2 >
-        Filicidades
+        Registro exitoso
     </h2>
     <p class="text-justify">Te acabas de resitrar con exito</p>
     <p class="text-justify">Para iniciar sesion <a href="/index">Click aqui</a></p>
 </div>
+<form>
+    <div class="wrap-input100 validate-input">
+        <input class="input100" type="text" name="nombreTarea" id="nombreTarea">
+        <span class="focus-input100"></span>
+        <span class="symbol-input100">
+							<i class="fa fa-envelope" aria-hidden="true"></i>
+						</span>
+    </div>
+
+    <div class="container-login100-form-btn">
+        <button type="button" class="login100-form-btn" onclick="agregarTarea()" >
+            Agregar Tarea
+        </button>
+    </div>
+</form>
 
 </body>
 </html>
