--- a/src/main/resources/templates/listaUsuarios.html
+++ b/src/main/resources/templates/listaUsuarios.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
-    <script src="Usuarios.js"></script>
+    <script src="/js/registro2.js"></script>
 </head>
 <body>
 <table class="table" id="ListaUsuariosTabla">
@@ -16,8 +16,8 @@
         <th scope="col">Usuario</th>
         <th scope="col">Nombre</th>
         <th scope="col">Apellido</th>
-        <th scope="col">Edad</th>
-        <th scope="col">Peso</th>
+        <th scope="col">Correo</th>
+        <th scope="col">Contrasena</th>
     </tr>
     </thead>
     <tbody>
